<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReadyQTV</string>

    <string name="menu_settings">Settings</string>
    
    <string name="textView_livetext">Live</string>
    
    <string name="textView_channeltext">Channel</string>
    
    <string name="textView_timetext">7:00PM - 9:00PM</string>
    
    <string name="textView_sbstext">SBS :</string>
    
    <string name="textView_timebar">1월 18일 2013년</string>
    
    <string name="textView_profile">MY PROFILE : </string>
    
    <string name="textView_profilename">JITAEE YOU</string>
    
    <string name="textView_popuptext">Are you going to use 2,000 coin for   event?</string>
    
    <string name="textView_ask_buystar">Do you want to buy 5 star?</string>
    
    <string name="textView_answer_buystar">Complete</string>
    
    <string name="textView_account_welcome">Welcome to ReadyQTV</string>
    
    <string name="textView_account_edit_email">Edit Email</string>
    
    <string name="textView_account_edit_password">Edit Password</string>
    
    <string name="textView_account_login">Login</string>
    
    <string name="textView_account_signup">Sign up</string>
    
    <string name="textView_more_login_firstsentence">Login to ReadyQTV</string>
    
    <string name="editText_more_login_email_hint">Email</string>
    
    <string name="editText_more_login_password_hint">Password</string>
    
    <string name="checkBox_autologin">  Auto Login</string>
    
    <string name="textView_account_signup_firstsententce">New Account</string>
    
    <string name="checkBox_signup_agree"> Agree with ReadyQTVs Terms of Service and Privacy Policy</string>
    
    <string name="editText_signup_write_email_hint">Email address</string>
    
    <string name="editText_signup_create_password_hint">Create a Password</string>
    
    <string name="editText_signup_confirm_password_hint">Confirm your password</string>
    
    <string name="editText_signup_username_hint">User Name</string>
    
    <string name="textView_profile_myinformation">My Information</string>
    
    <string name="textView_profile01_email">Email</string>
    
    <string name="textView_editmypassword">EDIT MY PASSWORD</string>
    
    <string name="editText_editpassword_newpw_hint">new password</string>
    
    <string name="editText_editpassword_confirmpw_hint">confirm your new password</string>
    
    <string name="textView_setting_alert">Alert Setting</string>
    
    <string name="textView_setting_pushalert">Push Alert</string>
    
    <string name="textView_setting_soundalert">Sound Alert</string>
    
    <string name="textView_rank_weekly_friends">Weekly friends Rank</string>
    
    <string name="textView_rank_world">World Rank</string>
    
    <string name="textView_ask_send_ticket">            ReadyQTV \nYou sent the ticket to ABC.</string>

</resources>