<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_singup_tap" >

        <Button
            android:id="@+id/button_account_signup_back_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/activity_backbutton_left" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:background="@drawable/main_backg01"
        android:layout_weight="0.20" >

        <TextView
            android:id="@+id/textView_account_signup_firstsententce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_account_signup_firstsententce"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#20B2AA" />
        
        <TextView
            android:id="@+id/textView_account_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/textView_account_signup"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView_editwindow"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/more_edit_type03" />

        <CheckBox
            android:id="@+id/checkBox_signup_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="20dp"
            android:text="@string/checkBox_signup_agree" />

        <EditText
            android:id="@+id/editText_signup_write_email_hint"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:hint="@string/editText_signup_write_email_hint"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_signup_create_password"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:hint="@string/editText_signup_create_password_hint"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_signup_confirm_password"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="122dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:hint="@string/editText_signup_confirm_password_hint"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_signup_username"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="164dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:hint="@string/editText_signup_username_hint"
            android:ems="10" 
            android:inputType="text"/>

        <Button
            android:id="@+id/button_signup_enter"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/more_signup_enter" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>