<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_login_tap" >

        <Button
            android:id="@+id/button_account_login_back_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/activity_backbutton_left" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:background="@drawable/main_backg01"
        android:layout_weight="0.20" >

        <TextView
            android:id="@+id/textView_more_login_firstsentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_more_login_firstsentence"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#20B2AA" />

        <ImageView
            android:id="@+id/imageView_edit_login01"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/more_edit_type02" />

        <EditText
            android:id="@+id/textView_more_login_email_hint"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="37dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:hint="@string/editText_more_login_email_hint"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/textView_more_login_password_hint"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="#00000000"
            android:hint="@string/editText_more_login_password_hint"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="20dp"
            
            android:text="@string/checkBox_autologin" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>