<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_account_tap" >

        <Button
            android:id="@+id/button_account_back_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/activity_backbutton_left" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:background="@drawable/main_backg01"
        android:layout_weight="0.20" >

        <TextView
            android:id="@+id/textView_account_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_account_welcome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#20B2AA" />

        <ImageView
            android:id="@+id/imageView_edit_welcome"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/more_edit_type02" />

        <TextView
            android:id="@+id/textView_account_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_account_edit_password"
            android:textColor="#20B2AA"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_account_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_account_edit_email"
            android:textColor="#20B2AA"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView_editwindow_email"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/more_edit_type01" />

        <ImageView
            android:id="@+id/imageView_editwindow_password"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/more_edit_type01" />

        <Button
            android:id="@+id/button_account_login_progress"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="right"
            android:background="@drawable/more_progress_arrow" />
        
        <Button
            android:id="@+id/button_account_signup_progress"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="right"
            android:background="@drawable/more_progress_arrow" />
        
        <Button
            android:id="@+id/button_account_edit_email_progress"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="right"
            android:background="@drawable/more_progress_arrow" />
        
        <Button
            android:id="@+id/button_account_edit_password_progress"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="right"
            android:background="@drawable/more_progress_arrow" />

        <TextView
            android:id="@+id/textView_account_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:text="@string/textView_account_login"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView_account_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/textView_account_signup"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>