<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_password_tap" >

        <Button
            android:id="@+id/button_more_editpassword_back_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/activity_backbutton_left" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:background="@drawable/edit_account_back"
        android:layout_weight="0.20" >
        
        <ImageView
            android:id="@+id/imageView_profile_title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:src="@drawable/event01_timebar" />

        <TextView
            android:id="@+id/textView_editmypassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/textView_editmypassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <ImageView
            android:id="@+id/imageView_edit_password_enter"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/more_edit_type01" />

        <Button
            android:id="@+id/button_editpassword_complete"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="290dp"
            android:background="@drawable/more_editpassword_btn" />

        <ImageView
            android:id="@+id/imageView_edit_password_confirm"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/more_edit_type02" />

        <EditText
            android:id="@+id/editText_editpassword_newpw_hint"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:background="#00000000"
            android:hint="@string/editText_editpassword_newpw_hint"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_editpassword_confirmpw_hint"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="203dp"
            android:background="#00000000"
            android:hint="@string/editText_editpassword_confirmpw_hint"
            android:ems="10"
            android:inputType="textPassword" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ad1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>